--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prebuild": "npm run clean",
-    "start": "ts-node --transpile-only src/index.ts",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "NODE_ENV=production ts-node --transpile-only src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "clean": "rm -rf dist",
     "test": "test"
   },
@@ -42,6 +42,9 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "fastify": "^4.15.0"
+    "@fastify/static": "^6.10.0",
+    "@fastify/view": "^7.4.1",
+    "fastify": "^4.15.0",
+    "handlebars": "^4.7.7"
   }
 }
