create CLI for rollbacks

--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.15.11",
+    "@types/yargs": "^17.0.24",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "yargs": "^17.7.2"
   },
   "dependencies": {
     "@fastify/static": "^6.10.0",
