--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "clean": "rm -rf dist",
     "test": "test",
-    "migrate": "tsx src/migrate.ts"
+    "migrate": "tsx src/migrate.ts",
+    "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.15.11",
     "@types/yargs": "^17.0.24",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
