--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf dist",
     "test": "test",
     "migrate": "tsx src/migrate.ts",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/**/*.ts",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.15.11",
     "@types/yargs": "^17.0.24",
+    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
