--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf dist",
     "test": "test",
     "migrate": "tsx src/migrate.ts",
+    "import": "tsx src/import.ts",
     "format": "prettier --write src/**/*.ts",
     "prepare": "husky install"
   },
@@ -55,6 +56,7 @@
     "fastify": "^4.15.0",
     "handlebars": "^4.7.7",
     "postgrator": "^7.1.1",
+    "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6"
   }
 }
