--- a/package.json
+++ b/package.json
@@ -44,11 +44,7 @@
     "@types/yargs": "^17.0.24",
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.0.3",
-    "yargs": "^17.7.2"
+    "typescript": "^5.0.3"
   },
   "dependencies": {
     "@fastify/static": "^6.10.0",
@@ -57,6 +53,10 @@
     "handlebars": "^4.7.7",
     "postgrator": "^7.1.1",
     "sqlite": "^4.2.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^3.12.7",
+    "yargs": "^17.7.2"
   }
 }
