--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.21.4"
   }
 }
