--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint --ext .ts src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "schema:compile": "json2ts -i src/**/*.json -o src/lib/types/"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "husky": "^8.0.3",
+    "json-schema-to-typescript": "^13.0.1",
     "prettier": "^2.8.8",
     "typescript": "^5.0.3"
   },
