--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/",
-    "target": "ES2020"
+    "target": "ES2020",
+    "resolveJsonModule": true
   }
 }
