--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.15.11",
+    "@types/nunjucks": "^3.2.2",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
@@ -57,7 +58,7 @@
     "@fastify/static": "^6.10.0",
     "@fastify/view": "^7.4.1",
     "fastify": "^4.15.0",
-    "handlebars": "^4.7.7",
+    "nunjucks": "^3.2.4",
     "postgrator": "^7.1.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
