--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.10.0",
     "@fastify/view": "^7.4.1",
     "fastify": "^4.15.0",
