--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "homepage": "https://github.com/comatory/czdomains#readme",
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
-    "@types/node": "^18.15.11",
     "@types/nunjucks": "^3.2.2",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
@@ -53,7 +52,8 @@
     "husky": "^8.0.3",
     "json-schema-to-typescript": "^13.0.1",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "undici": "^5.22.1"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
