--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "fastify": "^4.15.0",
     "minidotenv": "^1.1.0",
     "nunjucks": "^3.2.4",
+    "nunjucks-intl": "^1.0.3",
     "postgrator": "^7.1.1",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
