--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "@fastify/formbody": "^7.4.0",
+    "@fastify/rate-limit": "^8.0.1",
     "@fastify/static": "^6.10.0",
     "@fastify/view": "^7.4.1",
     "fastify": "^4.15.0",
