--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 IP2LOCATION_API_KEY=***********
 COOKIE_SECRET=***********
 FORM_SUBMISSION_ACTION_URL=***********
+DB_PATH=*[OPTIONAL_CAN_BE_REMOVED]*
+PORT=*[OPTIONAL_CAN_BE_REMOVED]*
+HOST=*[OPTIONAL_CAN_BE_REMOVED]*
